Match native permission terminal flow